--- a/version2.tex
+++ b/version2.tex
@@ -193,7 +193,7 @@ A haplic podzol with distinct soil horizons is dominant on this site. The mean d
 The average groundwater table level can be roughly estimated at -280~cm below the surface. 
 
 The soil characteristics of the horizons below the top-soil %or we can include top-soil in the table and use NA
-are given in the table~\ref{tab:soiltxt}.\todo{I don't get the percentage, I would probably remove even this table.} 
+are given in the table~\ref{tab:soiltxt}.
 
 %comment Lukas: The percentages of particles < 2mm are used for USDA classification. that is why the sum of clay, silt and sand gives 100%, additional information is about percentages of skelet >2mm
 %spodic horizon is Bhs and Bs
@@ -419,7 +419,7 @@ h(x,t) &= 4 \; \mbox{cm} \Rightarrow H(x,t) = 4 \; \mbox{cm}; \quad \forall (x,t
 h(x,t) &= 0  \; \mbox{cm}  \; \Rightarrow \; H(x,t) = -280.0  \; \mbox{cm}; \quad \forall (x,t) \in \Gamma_3 \times [0,T).
 \end{split}
 \end{lineq}
-where $T$ is the simulation end time [$T$], and $\vec{n}$ is the boundary normal vector.
+where $T$ is the simulation end time [T], and $\vec{n}$ is the boundary normal vector.
 
 The initial condition was assumed as a steady state  solution  of \eqref{richaxi} with the boundary $\Gamma_1 \cup \Gamma_2$ assumed as a no-flow boundary -- thus the entire domain $\Omega$ was considered to be in hydrostatic state. The initial condition states that 
 \begin{lineq}
@@ -525,10 +525,10 @@ of the REVG inverse model of SR experiment
  even beyond the physically acceptable solutions. }
 \begin{small}
 \doublespacing
-\begin{tabular}{c c c c c}
+\begin{tabular}{c | c| c| c| c}
 \toprule
 % Ranges of depths, horizon(s)&\multicolumn{4}{c}{Input values for inverse modelling}\\ \cline{2-5}
-$\theta_s$ [-]&$\alpha$ [m$^{-1}$]&n [-]& $K_s$ [m.s$^{-1}$] & $S_s$ [m$^-1$] \\ \hline
+$\theta_s$ [-]&$\alpha$ [m$^{-1}$]&n [-]& $K_s$ [m.s$^{-1}$] & $S_s$ [m$^{-1}$] \\ \hline
 \toprule
 0.25 -- 0.90 & 0.01 -- 5.0 & 1.05 -- 2.10 & $10^{-7}$ -- $10^{-4}$ & 0.0 -- 10.0 \\
 \toprule
@@ -609,17 +609,17 @@ Total Sobol Index & 0.850 & 0.921 & 0.876 & 0.868 & 0.884 \\
 \end{center}
 \end{table}
 
-The first run with discretization level $r_f=0$ generated after 40.000 objective function calls (each call took approximately 3~min, executed on 32-core Intel(R) Xeon(R) CPU E5-2630, bogomips 4801.67) the local extremes are given in table~\ref{shp-vysledky}, where the gray lines refer to local extremes with bad fitting properties (extremes 1-5), the local extremes 6-8 refer to inverse model solutions with good fitting properties. The results were visually inspected. An example of bad fitting dataset is depicted on figure~\ref{rf0examples} - left, and the example of the good fitting dataset is depicted on figure~\ref{rf0examples} - right. Solution for each dataset is then given in Appendix, see figures~\ref{rf0ex1}-\ref{rf0ex4}.
+The first run with discretization level $r_f=0$ generated after 40.000 objective function calls (each call took approximately 3~min, executed on 32-core Intel(R) Xeon(R) CPU E5-2630, bogomips 4801.67) the local extremes are given in table~\ref{shp-vysledky}, where the gray lines refer to local extremes with bad fitting properties (extremes 1-5), the local extremes 6-8 refer to inverse model solutions with good fitting properties. The results were visually inspected. An example of bad fitting dataset is depicted on figure~\ref{rf0samples} - left, and the example of the good fitting dataset is depicted on figure~\ref{rf0samples} - right. Solution for each dataset is  given in Appendix.
 
 
 
 
-\begin{table}[ht]
+\begin{table}
 \begin{center}
-% \caption{Identified local extremes of Pareto front during the first run of parameter search procedure.}
- \begin{footnotesize}
+\caption{Identified local extremes of Pareto front during the first run of parameter search procedure.}
+ \begin{small}
 \begin{tabular}{l || c c c c c  }
-% \toprule
+\toprule
 no. & $\alpha$ [cm$^{-1}$] & $n$ [-] & $\theta_s$ [-] & $K_s$ [cm.hrs$^{-1}$] & $S_s$  [cm$^{-1}$] \\ \hline \hline
 \rowcolor{gray}{\bf 1} & \num{2.447e-4} &  2.45 & 0.25 & \num{0.025} & \num{0.419e-2}   \\ 
 \rowcolor{gray}{\bf 2} & \num{0.101e-2} & 0.6517 &  0.271 & \num{1.092} &  \num{2.879e-2}  \\ 
@@ -629,10 +629,10 @@ no. & $\alpha$ [cm$^{-1}$] & $n$ [-] & $\theta_s$ [-] & $K_s$ [cm.hrs$^{-1}$] & 
 \rowcolor{white}{\bf 6} & \num{0.258e-2} & 2.152  & 0.401 &  \num{1.095} & 0  \\ 
 \rowcolor{white}{\bf 7} & \num{0.3802e-2} & 1.279 & 0.594 &  \num{1.165} & 0  \\ 
 \rowcolor{white} {\bf 8} & \num{0.255e-2} & 1.384 & 0.254 &  \num{1.119} &  \num{1.922e-4}  \\ \hline
-% \toprule
+\toprule
 \end{tabular}
- \end{footnotesize}
-\label{shp-vysledky}
+ \end{small}
+ \label{shp-vysledky}
 \end{center}
 \end{table}
 
@@ -642,13 +642,13 @@ no. & $\alpha$ [cm$^{-1}$] & $n$ [-] & $\theta_s$ [-] & $K_s$ [cm.hrs$^{-1}$] & 
 {\includegraphics[height=7cm]{images/badfit/2.eps}}}
 \rotatebox{-90}{
 {\includegraphics[height=7cm]{images/hezky/1.eps}}}
-\label{rf0examples}
 \caption{Left: Local extreme 2 -- bad fitting properties, Right: Local extreme 5 -- good fitting properties.}
+\label{rf0samples}
 \end{figure}
 
-In the next step the refinement level was increased, new mesh was generated, the new mesh discretized the domain into 4503 nodes and 8488 elements. The Picard criterion for the pressure head was refined for \num{1e-3}~cm, and the initial time step was \num{1e-7}~hrs. Only the local extremes 6-8 from table~\ref{shp-vysledky} were further evaluated.
+In the next step the refinement level was increased, new mesh was generated, the new mesh discretized the domain into 4503 nodes and 8488 elements. The Picard criterion for the pressure head was refined for~\num{1e-3}~cm, and the initial time step was~\num{1e-7}~hrs. Only the local extremes 6-8 from table~\ref{shp-vysledky} were further evaluated.
 
-For the local extreme 6, the refined numerical treatment $r_f=1$ has not affected the objective function, the figure~\ref{objfnc6} depicts two examples of the scatter plots -- for the parameter $\alpha$ and $n$. The scatter plots of all parameters are given in Appendix, figures~\ref{ext6rf0-an} -- \ref{ext6rf0-Ss3}. The response for the $\alpha$ parameter (figure \ref{objfnc6} - left) seems adequate, which wasn't the case of $n$ parameter  (figure \ref{objfnc6} - right). It turns out that for this parameter set the objective function exhibits poor local sensitivity. However, this wasn't the case of the other local extremes, see figure~\ref{objfnc6.2} - left. 
+For the local extreme 6, the refined numerical treatment $r_f=1$ has not affected the objective function, the figure~\ref{objfnc6} depicts two examples of the scatter plots -- for the parameter $\alpha$ and $n$. The scatter plots of all parameters are given in Appendix. The response for the $\alpha$ parameter (figure \ref{objfnc6} - left) seems adequate, which wasn't the case of $n$ parameter  (figure \ref{objfnc6} - right). It turns out that for this parameter set the objective function exhibits poor local sensitivity. However, this wasn't the case of the other local extremes, see figure~\ref{objfnc6.2} - left. 
 
 The local extreme 8 is characterized by nonzero specific storage $S_s$. However, if we look closer to the scatter plot~\ref{objfnc6.2} - right, it becomes apparent, that the specific storage should vanish even for this parametric set. Both local extremes 7 and 8 exhibit similar local sensitivity and similar response for changing the $r_f$ level, as depicted in figure~\ref{objfnc6.2} - right.
 
@@ -660,8 +660,8 @@ The local extreme 8 is characterized by nonzero specific storage $S_s$. However,
 {\includegraphics[height=7cm]{data/objvals/alpha-4.eps}}}
 \rotatebox{-90}{
 {\includegraphics[height=7cm]{data/objvals/n-4.eps}}}
-\label{objfnc6}
 \caption{Scatter plots of the objective function~\eqref{objektiva1} for the parameter $\alpha$ (left) and $n$ (right) for extreme 6.}
+\label{objfnc6}
 \end{figure}
 
 
@@ -670,8 +670,8 @@ The local extreme 8 is characterized by nonzero specific storage $S_s$. However,
 {\includegraphics[height=7cm]{data/objvals/n-5.eps}}}
 \rotatebox{-90}{
 {\includegraphics[height=7cm]{data/objvals/Ss-6.eps}}}
-\label{objfnc6.2}
 \caption{Scatter plots of the objective function~\eqref{objektiva1} for the parameter $n$ at extreme 7 (left)  and $S_s$ at extreme 8  (right)}.
+\label{objfnc6.2}
 \end{figure}
 
 For the local extremes 7 and 8, the inverse process was restarted with discretization level $r_f=1$. 
@@ -680,10 +680,10 @@ The new inverse solution was searched in  vicinity of both extremes, and thus tw
 
 \begin{table}[ht]
 \begin{center}
-\caption{Ranges of SHPs ($\vec{p}_{max}$ and $\vec{p}_{min}$) for identifying the SHPs in the top-soil layer for {\it refinement level} $r_f=1$. }
+\caption{Ranges of SHPs ($\vec{p}_{max}$ and $\vec{p}_{min}$) for identifying the SHPs in the top-soil layer for { refinement level} $r_f=1$. }
 \begin{small}
 \doublespacing
-\begin{tabular}{ l || c c c c }
+\begin{tabular}{ l || c | c| c| c }
 \toprule
 % Ranges of depths, horizon(s)&\multicolumn{4}{c}{Input values for inverse modelling}\\ \cline{2-5}
 extreme & $\theta_s$ [-]&$\alpha$ [cm$^{-1}$]&n [-]& $K_s$ [cm.hrs$^{-1}$]  \\ \hline
@@ -704,13 +704,13 @@ With the increased discretization level the runtime for each simulation increase
 {\includegraphics[height=7cm]{images/fitrf1/7.eps}}}
 \rotatebox{-90}{
 {\includegraphics[height=7cm]{images/fitrf1/7-new.eps}}}
-\label{rf1examples}
 \caption{Left: Local extreme 7 infiltration curve for the original parameter set obtained at $r_f=0$ and solved on model with discretization $r_f=1$, right: solution for the updated parameter set in  vicinity of the extreme 7.}
+\label{rf1examples}
 \end{figure}
 
-The updated solutions maintained similar fitting qualities as the solutions obtained at $r_f=0$, see figure~\ref{rf1examples} - right, the solution depicted on figure~\ref{rf1examples} - right is a dataset obtained at previous discretization level tested on model with increased discretization level.
+The updated solutions maintained similar fitting qualities as the solutions obtained at $r_f=0$, see figure~\ref{rf1examples} - right. Whereas the solution depicted on figure~\ref{rf1examples} - left was created with SHPs dataset obtained at previous discretization level ($r_f=0$) tested on model with increased discretization level ($r_f=1$).
 
-In order to evaluate the results obtained at $r_f=1$ discretization level, the discretization level was increased again for $r_f=2$. New mesh was generated with 6843 nodes and 13122 elements. Initial time step was now set for \num{1e-8}~hrs. New scatter plots were generated, an example is given in figure~\ref{ext6rf1-an2-example}. For all scatter plots see Appendix.
+In order to evaluate the results obtained at $r_f=1$ discretization level, the discretization level was increased again for $r_f=2$. New mesh was generated with 6843 nodes and 13122 elements. Initial time step was now set for \num{1e-8}~hrs, and the Picard criterion was set for~\num{1e-4}~hrs. New scatter plots were generated, an example is given in figure~\ref{ext6rf1-an2-example}. For all scatter plots see Appendix.
 
 
 \begin{figure}[htb!]
@@ -737,14 +737,14 @@ no. & $\alpha$ [cm$^{-1}$] & $n$ [-] & $\theta_s$ [-] & $K_s$ [cm.hrs$^{-1}$] & 
 % \toprule
 \end{tabular}
  \end{footnotesize}
-\label{shp-vysledky}
+\label{shp-vysledky-final}
 \end{table}
 
 \begin{figure}
 \rotatebox{-90}{
 {\includegraphics[height=10cm]{images/retc.eps}}}
-\label{retc-final}
 \caption{Resulting retention curves obtained from the inverse model.}
+\label{retc-final}
 \end{figure}
 
 \section{Conclusions}
@@ -897,12 +897,14 @@ Scatter plots of the objective functions for the local extreme 8 are depicted in
 
 \section{New solutions for $r_f=1$}
 
+The updated solutions for the local extremes 7 and 8 are depicted in figures~\ref{rf0rf1img1} and~\ref{rf0rf1img2}.
+
 \begin{figure}
 \rotatebox{-90}{
 {\includegraphics[height=7cm]{images/fitrf1/7.eps}}}
 \rotatebox{-90}{
 {\includegraphics[height=7cm]{images/fitrf1/7-new.eps}}}
-\label{rf0examples}
+\label{rf0rf1img1}
 \caption{Left: Local extreme 7 infiltration curve for the original parameter set obtained at $r_f=0$ and solved on model with discretization $r_f=1$, right: solution for the updated parameter set in  vicinity of the extreme 7.}
 \end{figure}
 
@@ -911,7 +913,7 @@ Scatter plots of the objective functions for the local extreme 8 are depicted in
 {\includegraphics[height=7cm]{images/fitrf1/8.eps}}}
 \rotatebox{-90}{
 {\includegraphics[height=7cm]{images/fitrf1/8-new.eps}}}
-\label{rf0examples}
+\label{rf0rf1img2}
 \caption{Left: Local extreme 8 infiltration curve for the original parameter set obtained at $r_f=0$ and solved on model with discretization $r_f=1$, right: solution for the updated parameter set in  vicinity of the extreme 7.}
 \end{figure}
 
